--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.5.2"
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
