--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
